--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,6 @@ input {
 	outline: none;
 	border: none;
 }
-
 textarea {
   outline: none;
   border: none;
@@ -186,6 +185,21 @@ iframe {
   justify-content: space-between;
   padding: 100px 130px 30px 95px;
 }
+.wrap-registration {
+  width: 960px;
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 100px 130px 30px 100px;
+}
 
 /*------------------------------------------------------------------
 [  ]*/
@@ -203,6 +217,9 @@ iframe {
 .login100-form {
   width: 290px;
 }
+.registration-form{
+  width: 700px;
+}
 
 .login100-form-title {
   font-family: Poppins-Bold;
@@ -214,6 +231,17 @@ iframe {
   width: 100%;
   display: block;
   padding-bottom: 54px;
+}
+.registration-form-title {
+  font-family: Poppins-Bold;
+  font-size: 24px;
+  color: #333333;
+  line-height: 1.2;
+  text-align: center;
+
+  width: 100%;
+  display: block;
+  padding-bottom: 20px;
 }
 
 
@@ -237,6 +265,32 @@ iframe {
   height: 50px;
   border-radius: 25px;
   padding: 0 30px 0 68px;
+}
+.dropdown {
+  font-family: Poppins-Medium;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #666666;
+
+  display: block;
+  width: 100%;
+  background: #e6e6e6;
+  height: 50px;
+  border-radius: 25px;
+  padding: 0 30px 0 30px;
+}
+select::-ms-expand
+{
+    display: none;
+}
+select
+{
+    -webkit-appearance: none;
+    -moz-appearance: none;      
+    appearance: none;
+    padding: 2px 30px 2px 2px;
+    border: none;
+    outline: none;
 }
 
 
@@ -298,7 +352,30 @@ iframe {
   -moz-transition: all 0.4s;
   transition: all 0.4s;
 }
+.symbol-dropdown {
+  font-size: 15px;
 
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  border-radius: 25px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-left: 180px;
+  pointer-events: none;
+  color: #666666;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
 .input100:focus + .focus-input100 + .symbol-input100 {
   color: #5471ab;
   padding-left: 28px;
@@ -359,6 +436,9 @@ iframe {
   .wrap-login100 {
     padding: 177px 90px 33px 85px;
   }
+  .wrap-registration {
+    padding: 100px 90px 33px 85px;
+  }
 
   .login100-pic {
     width: 35%;
@@ -367,13 +447,18 @@ iframe {
   .login100-form {
     width: 50%;
   }
+  .login100-form {
+    width: 100%;
+  }
 }
 
 @media (max-width: 768px) {
   .wrap-login100 {
     padding: 100px 80px 33px 80px;
   }
-
+  .wrap-registration {
+    padding: 100px 15px 33px 15px;
+  }
   .login100-pic {
     display: none;
   }
@@ -381,11 +466,25 @@ iframe {
   .login100-form {
     width: 100%;
   }
+  .registration-form {
+    width: 100%;
+  }
 }
+@media (max-width: 697px) {
+  .wrap-registration {
+    padding: 100px 15px 33px 15px;
+  }
+} 
 
 @media (max-width: 576px) {
   .wrap-login100 {
     padding: 100px 15px 33px 15px;
+  }
+  .wrap-registration {
+    padding: 100px 15px 33px 15px;
+  }
+  .symbol-dropdown{
+    padding-left: 380px;
   }
 }
 
